<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_head_img"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_name"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/inputemail"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:textColor="@color/black" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/inputusername"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/inputpassword"
        android:inputType="textPassword"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/reg_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/inputpasswordrepeat"
        android:inputType="textPassword"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/selector_logout"
        android:text="注册"
        android:textColor="@color/white" />

</LinearLayout>