<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_head_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:scaleType="fitXY"
        android:src="@drawable/default_login" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_head_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true" 
        android:textColor="@color/black"
        android:hint="@string/inputemail"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawablePadding="5dp"
        android:background="@drawable/selector_edittext_account"
        android:drawableLeft="@drawable/user_password"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true" 
        android:hint="@string/inputpassword"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_password"
        android:layout_alignRight="@+id/user_password"
        android:layout_below="@+id/user_password"
        android:layout_marginTop="14dp"
        android:background="@drawable/selector_logout"
        android:text="@string/login" 
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/new_reg"
        style="@style/whiteblue_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:text="新用户"
        android:textColor="@drawable/button_font_style" />
    <Button
        android:id="@+id/find_psd"
        style="@style/whiteblue_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:text="找回密码"
        android:textColor="@drawable/button_font_style" />

</RelativeLayout>